fix(crux-ui): uncontrolled reacts errors
+ other minor errors

--- a/web/crux-ui/locales/en/products.json
+++ b/web/crux-ui/locales/en/products.json
@@ -11,6 +11,7 @@
   "altPicture": "Picture of {{name}}",
   "type": "Type",
   "versions": "Versions",
+  "changelog": "Changelog",
 
   "simple": "Simple",
   "complex": "Complex",
