feat(crux-ui): image reorder improvements

--- a/web/crux-ui/locales/en/images.json
+++ b/web/crux-ui/locales/en/images.json
@@ -15,5 +15,6 @@
   "secrets": "Secrets",
   "imageTag": "Image:Tag",
   "imageTagsFor": "Image tags for {{name}}",
-  "sensitiveKey": "Sensitive config data should be stored as secrets"
+  "sensitiveKey": "Sensitive config data should be stored as secrets",
+  "unknownTag": "unknown"
 }
