feat(crux-ui): image reorder improvements (#375)

--- a/web/crux-ui/locales/en/images.json
+++ b/web/crux-ui/locales/en/images.json
@@ -18,5 +18,6 @@
   "sensitiveKey": "Sensitive config data should be stored as secrets",
   "errors": {
     "preconditionFailed": "Node is unreachable"
-  }
+  },
+  "unknownTag": "unknown"
 }
