--- a/web/crux-ui/locales/en/nodes.json
+++ b/web/crux-ui/locales/en/nodes.json
@@ -41,5 +41,6 @@
   "rootPath": "Root path",
   "rootPathOptional": "Optional, leave empty for default paths",
   "update": "Update",
-  "updateError": "Failed to update agent: {{error}}"
+  "updateError": "Failed to update agent: {{error}}",
+  "ports": "Ports"
 }
