--- a/web/crux-ui/locales/en/deployments.json
+++ b/web/crux-ui/locales/en/deployments.json
@@ -8,6 +8,8 @@
   "noItems": "You haven't made a deployment.",
   "prefixName": "Prefix: {{name}}",
 
+  "proceedYouDeletePrefix": "If you proceed, you will delete containers under prefix {{prefix}}. This action is not revocable.",
+
   "errors": {
     "preconditionFailed": "Node is unreachable!"
   }
