--- a/web/crux-ui/locales/en/container.json
+++ b/web/crux-ui/locales/en/container.json
@@ -105,7 +105,7 @@
 
   "crane": {
     "deploymentStrategy": "Deployment strategy",
-    "deploymentStrategies": { "unknown": "Unknown", "recreate": "Recreate", "rolling": "Rolling" },
+    "deploymentStrategies": { "recreate": "Recreate", "rolling": "Rolling" },
     "healthCheckConfig": "Health check config",
     "port": "Port",
     "livenessProbe": "Liveness probe",
