--- a/web/crux-ui/locales/en/common.json
+++ b/web/crux-ui/locales/en/common.json
@@ -172,5 +172,11 @@
   "cannotDefineSecretsHere": "Secret keys can be provided here, values can be set in deployments.",
   "required": "Required",
   "notRequired": "Not required",
-  "alreadyPreparingSureOverwrite": "There is already a preparing deployment on the selected node. Are you sure want to overwrite?"
+  "alreadyPreparingSureOverwrite": "There is already a preparing deployment on the selected node. Are you sure want to overwrite?",
+  "dashboard": "Dashboard",
+  "changelog": "Changelog",
+  "changelogName": "Changelog: {{name}}",
+  "emptyChangelog": "You have not provided any changes",
+  "event": "Event",
+  "data": "Data"
 }
