refactor: use kratos recovery code instead of link

--- a/web/crux-ui/locales/en/common.json
+++ b/web/crux-ui/locales/en/common.json
@@ -3,6 +3,7 @@
   "logOut": "Log out",
   "signUp": "Sign up",
   "email": "E-mail",
+  "code": "Code",
   "name": "Name",
   "firstName": "First name",
   "lastName": "Last name",
