--- a/web/crux-ui/locales/en/recovery.json
+++ b/web/crux-ui/locales/en/recovery.json
@@ -1,5 +1,6 @@
 {
   "title": "Account recovery",
   "recovery": "Account recovery",
-  "linkSent": "A recovery link was sent to your address. Please check your e-mails."
+  "codeSentToEmail": "A recovery code was sent to {{email}}. Please check your e-mails.",
+  "recover": "Recover"
 }
