--- a/web/crux-ui/locales/en/container.json
+++ b/web/crux-ui/locales/en/container.json
@@ -24,9 +24,8 @@
     "files": "Files",
     "commands": "Commands",
     "arguments": "Arguments",
-    "ttySupport": "Tty support",
     "exposeStrategy": "Expose strategy",
-    "exposeStrategies": { "none": "None", "expose": "Expose", "exposeWithTls": "Expose with tls" },
+    "exposeStrategies": { "none": "None", "expose": "HTTP", "exposeWithTls": "HTTPS" },
     "ingressName": "Name",
     "ingressHost": "Host",
     "ingressUploadLimit": "Upload limit",
@@ -43,7 +42,6 @@
     "ingress": "Ingress",
     "expose": "Expose",
     "tty": "TTY",
-    "args": "Args",
     "initContainers": "Init containers",
     "ports": "Ports",
     "portRanges": "Port ranges",
