fix: image / instance config screen websocket editing

--- a/web/crux-ui/locales/en/images.json
+++ b/web/crux-ui/locales/en/images.json
@@ -1,6 +1,8 @@
 {
   "add": "Add image",
   "imageName": "Image name",
+  "imagesName": "Images - {{name}}",
+  "instancesName": "Instances - {{name}}",
   "imageNameAndTag": "Image name and tag",
   "containerName": "Container name",
   "tag": "Tag",
