feat(web): token auth flow

--- a/web/crux-ui/locales/en/settings.json
+++ b/web/crux-ui/locales/en/settings.json
@@ -6,5 +6,6 @@
   "editProfile": "Edit profile",
   "needToSetPassword": "You need to set a password.",
   "newPasswordExpiredPriviledge": "Your session is too old to set a password. You need to log out and recover your account by clicking on the \"Forgot your password?\" link on the Log In page.",
-  "clickToLogout": "Click here to log out"
+  "clickToLogout": "Click here to log out",
+  "profileToken": "Tokens"
 }
