feat(web): initialize http rest api (#451)
Co-authored-by: Bence Nagygyörgy <robot9706@gmail.com>

--- a/web/crux-ui/locales/en/settings.json
+++ b/web/crux-ui/locales/en/settings.json
@@ -6,5 +6,11 @@
   "editProfile": "Edit profile",
   "needToSetPassword": "You need to set a password.",
   "newPasswordExpiredPriviledge": "Your session is too old to set a password. You need to log out and recover your account by clicking on the \"Forgot your password?\" link on the Log In page.",
-  "clickToLogout": "Click here to log out"
+  "clickToLogout": "Click here to log out",
+  "profileToken": "Tokens",
+  "noTokens": "You haven't created any token yet. Make one by clicking 'Add' on the top right.",
+  "expiresAt": "Expires at",
+  "newToken": "New token",
+  "expirationIn": "Expiration in",
+  "newTokenTips": "Here is your newly created token, make sure to copy it now. You won’t be able to see it again!"
 }
