--- a/web/crux-ui/locales/en/register.json
+++ b/web/crux-ui/locales/en/register.json
@@ -4,5 +4,6 @@
   "createAcc": "Create account",
   "signUpGoogle": "Sign up with Google",
   "signUpGithub": "Sign up with GitHub",
-  "alreadyUser": "Already a user?"
+  "alreadyUser": "Already a user?",
+  "privacyPolicy": "When you register and use dyrectorio, you consent to dyrectorio processing your personal data in accordance with the terms outlined in the "
 }
