--- a/web/crux-ui/locales/en/register.json
+++ b/web/crux-ui/locales/en/register.json
@@ -5,5 +5,6 @@
   "signUpGoogle": "Sign up with Google",
   "signUpGithub": "Sign up with GitHub",
   "alreadyUser": "Already a user?",
-  "privacyPolicy": "When you register and use dyrectorio, you consent to dyrectorio processing your personal data in accordance with the terms outlined in the "
+  "privacyPolicyText": "When you register and use dyrectorio, you consent to dyrectorio processing your personal data in accordance with the terms outlined in the ",
+  "privacyPolicyLinkText": "Privacy Policy"
 }
