fix: config screen args translation

--- a/web/crux-ui/locales/en/container.json
+++ b/web/crux-ui/locales/en/container.json
@@ -24,6 +24,7 @@
     "files": "Files",
     "commands": "Commands",
     "arguments": "Arguments",
+    "args": "Arguments",
     "exposeStrategy": "Expose strategy",
     "exposeStrategies": { "none": "None", "expose": "HTTP", "exposeWithTls": "HTTPS" },
     "ingressName": "Name",
