feat: version http api

--- a/web/crux-ui/locales/en/common.json
+++ b/web/crux-ui/locales/en/common.json
@@ -131,7 +131,7 @@
     "obsolete": "Obsolete",
     "unknown": "Unknown",
     "preparing": "Preparing",
-    "in_progress": "In progress"
+    "in-progress": "In progress"
   },
 
   "containerStatuses": {
