--- a/web/crux-ui/locales/en/nodes.json
+++ b/web/crux-ui/locales/en/nodes.json
@@ -54,5 +54,5 @@
   "traefikAcmeEmail": "Traefik ACME email",
   "whatIsTraefik": "What is Traefik?",
   "traefikExplanation": "Traefik is a reverse proxy which lets users deploy services to subdomains as well as use HTTPS.",
-  "inProgress": "In progress"
+  "in-progress": "In progress"
 }
