feat: improve audit log

--- a/web/crux-ui/locales/en/common.json
+++ b/web/crux-ui/locales/en/common.json
@@ -194,6 +194,7 @@
   "changelog": "Changelog",
   "changelogName": "Changelog: {{name}}",
   "emptyChangelog": "You have not provided any changes",
+  "method": "Method",
   "event": "Event",
   "data": "Data",
   "log": "Log",
