--- a/web/crux-ui/locales/en/dashboard.json
+++ b/web/crux-ui/locales/en/dashboard.json
@@ -1,10 +1,44 @@
 {
   "statistics": "Statistics",
-  "auditLogEntries": "Audit log entries",
+  "auditLog": "Audit log entries",
   "projects": "Projects",
   "versions": "Versions",
   "failedDeployments": "Failed deployments",
-  "activeNodes": "Active nodes",
-  "lastDeploys": "Last 2 deploys",
-  "lastAuditLogs": "Last 10 audit log entries"
+  "onboarding": "Onboarding",
+  "done": "Done",
+  "youCanHideOnboard": "When you are ready to hide the onboarding tips, just click the `x` on the top-right corner.",
+  "onboardingItems": {
+    "signUp": {
+      "title": "Sign up to dyrector.io",
+      "description": "Create a dyrector.io account."
+    },
+    "createTeam":  {
+      "title": "Create a Team",
+      "description": "Create your first team. You can add more by clicking on the `Teams` menu."
+    },
+    "createNode":  {
+      "title": "Create a Node",
+      "description": "Nodes are the targets for your deployments. You can create a Docker or a Kubernetes node on the `Node` page."
+    },
+    "createProject":  {
+      "title": "Create the first Project",
+      "description": "A project can be an application or your infrastructure. Also this is where your versions live."
+    },
+    "createVersion":  {
+      "title": "Create a version",
+      "description": "A version can be `Incremental` or `Rolling`. Incremental versions are going to be the releases of your application. Rolling versions are the continuous deployments of an application, or the infrastucture: databases, proxies."
+    },
+    "addImages":  {
+      "title": "Add images to your version",
+      "description": "Add container images from a registry. You can add your private or public registries on the `Registry` page."
+    },
+    "addDeployment":  {
+      "title": "Add the first deployment",
+      "description": "Deployments are the connection between a version and a node. Here you can set node specific configurations like secrets."
+    },
+    "deploy":  {
+      "title": "Execute the deployment",
+      "description": "By executing the prepared deployment your node will pull, configure and start your specified containers."
+    }
+  }
 }
