--- a/web/crux-ui/locales/en/nodes.json
+++ b/web/crux-ui/locales/en/nodes.json
@@ -4,7 +4,8 @@
   "add": "Add node",
   "new": "New node",
   "tips": "Nodes are the environments where you plan to run your applications.",
-  "noItems": "You haven't added any nodes yet. To add a new node click 'Add' on the top right.",
+  "description": "Nodes are the deployment targets. You can add a new node by installing dyrector.io’s agents on your environment using a one-liner generated.",
+  "noItems": "You haven't added any nodes yet. To add a new node click 'Add' on the top right.\n\n",
 
   "revoke": "Revoke token",
   "confirmRevoke": "Are you sure you want to revoke the token?",
