fix(crux-ui): add links to registries

--- a/web/crux-ui/locales/en/registries.json
+++ b/web/crux-ui/locales/en/registries.json
@@ -32,7 +32,9 @@
     "gitlab": "Add your GitLab Registry.",
     "github": "Add your GitHub Registry.",
     "google": "Add your Google Registry.",
-    "unchecked": "Add a registry without authentication. This type does not provide image nor tag browsing."
+    "unchecked": "Add a registry without authentication. This type does not provide image nor tag browsing.",
+    "pat-info": "Learn more about personal access token here.",
+    "registry-info": "Learn more about the registry here."
   },
 
   "type": {
