--- a/web/crux-ui/locales/en/registries.json
+++ b/web/crux-ui/locales/en/registries.json
@@ -35,7 +35,7 @@
     "unchecked": "Add a registry without authentication. This type does not provide image nor tag browsing.",
     "learnMorePat": "Learn more about personal access token",
     "learnMoreRegistry": "Learn more about the registry",
-    "githubTokenReason": "Github allow downloads, while access to the complete listing of all tags, which we extensively utilize, requires authentication.",
+    "githubTokenReason": "Github allows downloads, while access to the complete listing of all tags requires authentication, which we extensively utilize.",
     "here": "here"
   },
 
