--- a/web/crux-ui/locales/en/registries.json
+++ b/web/crux-ui/locales/en/registries.json
@@ -32,7 +32,11 @@
     "gitlab": "Add your GitLab Registry.",
     "github": "Add your GitHub Registry.",
     "google": "Add your Google Registry.",
-    "unchecked": "Add a registry without authentication. This type does not provide image nor tag browsing."
+    "unchecked": "Add a registry without authentication. This type does not provide image nor tag browsing.",
+    "learnMorePat": "Learn more about personal access token",
+    "learnMoreRegistry": "Learn more about the registry",
+    "githubTokenReason": "Github allows downloads, while access to the complete listing of all tags requires authentication, which we extensively utilize.",
+    "here": "here"
   },
 
   "type": {
