fix: registration and verification flows

--- a/web/crux-ui/locales/en/common.json
+++ b/web/crux-ui/locales/en/common.json
@@ -12,6 +12,7 @@
   "send": "Send",
   "resend": "Resend",
   "clear": "Clear",
+  "documentation": "Documentation",
 
   "goBack": "Go back",
   "back": "Back",
