--- a/web/crux-ui/locales/en/login.json
+++ b/web/crux-ui/locales/en/login.json
@@ -5,5 +5,6 @@
   "signUp": "Sign up.",
   "refresh": "Your login session is too old. Please log in again.",
   "loginToAcceptInv": "You have to log in to accept the invitation.",
-  "dontHaveAnAccount": "Don't have an account yet?"
+  "dontHaveAnAccount": "Don't have an account yet?",
+  "newToDyo": "New to dyrector.io? Check out the"
 }
