--- a/web/crux-ui/locales/en/register.json
+++ b/web/crux-ui/locales/en/register.json
@@ -5,6 +5,6 @@
   "signUpGoogle": "Sign up with Google",
   "signUpGithub": "Sign up with GitHub",
   "alreadyUser": "Already a user?",
-  "privacyPolicyText": "When you register and use dyrector.io, you consent to dyrector.io processing your personal data in accordance with the terms outlined in the ",
-  "privacyPolicyLinkText": "Privacy Policy"
+  "whenYouRegister": "When you register and use dyrector.io, you consent to dyrector.io processing your personal data in accordance with the terms outlined in the ",
+  "privacyPolicy": "Privacy Policy"
 }
