feat: show reason on node container states

--- a/web/crux-ui/locales/en/common.json
+++ b/web/crux-ui/locales/en/common.json
@@ -39,6 +39,7 @@
   "type": "Type",
   "status": "Status",
   "state": "State",
+  "reason": "Reason",
   "loading": "Loading...",
   "noNameFound": "No {{name}} found",
   "yourTeams": "Your teams",
