fix: registry and storage editing

--- a/web/crux-ui/locales/en/registries.json
+++ b/web/crux-ui/locales/en/registries.json
@@ -57,9 +57,8 @@
 
   "altDefaultRegistryPicture": "Picture of registry",
   "errors": {
-    "invalidArgument": "Registry with the given URL does not exist",
-    "preconditionFailed": "This registry is already in use"
+    "invalidArgument": "Registry with the given URL does not exist"
   },
   "unknownRegistryType": "Unknown registry type: {{registryType}}",
-  "registryAlreadyInUse": "This registry is already in use. You may not be able to edit some of its properties."
+  "registryAlreadyInUse": "This registry is already in use. Modifying the url or the credentials may broke existing deployments."
 }
