--- a/web/crux-ui/locales/en/container.json
+++ b/web/crux-ui/locales/en/container.json
@@ -56,7 +56,7 @@
     "placeholders": {
       "port": "Port",
       "path": "Path",
-      "userIdNumber": "Id number",
+      "containerDefault": "Container default",
       "ingressName": "Ingress name",
       "ingressHost": "Ingress host",
       "ingressUploadLimit": "Ingress upload limit"
