--- a/web/crux-ui/locales/en/common.json
+++ b/web/crux-ui/locales/en/common.json
@@ -153,6 +153,12 @@
     "list": "List"
   },
 
+  "saveState": {
+    "saved": "Saved",
+    "saving": "Saving",
+    "disconnected": "Disconnected"
+  },
+
   "dyoWhiteLogo": "dyrector.io's white logo",
   "dyoLogo": "dyrector.io's logo",
   "heart": "Heart",
