--- a/web/crux-ui/locales/en/settings.json
+++ b/web/crux-ui/locales/en/settings.json
@@ -9,9 +9,6 @@
   "clickToLogout": "Click here to log out",
   "profileToken": "Tokens",
   "noTokens": "You haven't created any token yet. Make one by clicking 'Add' on the top right.",
-  "expiresAt": "Expires at",
-  "newToken": "New token",
-  "expirationIn": "Expiration in",
-  "newTokenTips": "Here is your newly created token, make sure to copy it now. You won’t be able to see it again!",
+  "newTokenTips": "Here is your newly created token, make sure to copy it now. You won't be able to see it again!",
   "onboarding": "Onboarding tips"
 }
