feat: add delete deployment button to version sections

--- a/web/crux-ui/locales/en/tokens.json
+++ b/web/crux-ui/locales/en/tokens.json
@@ -2,5 +2,6 @@
   "expiresAt": "Expires at",
   "newToken": "New token",
   "revoke": "Revoke token",
+  "areYouSureRevoke": "Are you sure you want to revoke the token?",
   "expirationIn": "Expiration in"
 }
