--- a/web/crux-ui/locales/en/teams.json
+++ b/web/crux-ui/locales/en/teams.json
@@ -3,6 +3,7 @@
   "teamsNameInvite": "Teams - {{name}} - Invitation",
 
   "invite": "Invite",
+  "reinvite": "Reinvite",
   "send": "Send",
   "role": "Role",
   "lastLogin": "Last login",
