feat: social sign-in

--- a/web/crux-ui/locales/en/login.json
+++ b/web/crux-ui/locales/en/login.json
@@ -1,8 +1,7 @@
 {
-  "title": "Login",
+  "orLogInWith": "Or log in with",
   "forgotPassword": "Forgot your password?",
   "dontHaveAccount": "Don't have an account?",
-  "signUp": "Sign up.",
   "refresh": "Your login session is too old. Please log in again.",
   "loginToAcceptInv": "You have to log in to accept the invitation.",
   "dontHaveAnAccount": "Don't have an account yet?",
