--- a/web/crux-ui/locales/en/common.json
+++ b/web/crux-ui/locales/en/common.json
@@ -158,6 +158,7 @@
   "saveState": {
     "saved": "Saved",
     "saving": "Saving",
+    "connected": "Connected",
     "disconnected": "Disconnected"
   },
 
