fix: deploy token avatar

--- a/web/crux-ui/locales/en/common.json
+++ b/web/crux-ui/locales/en/common.json
@@ -167,6 +167,7 @@
   "heart": "Heart",
   "userAvatar": "User's avatar",
   "teamAvatar": "Team's avatar",
+  "robotAvatar": "Robot's avatar",
   "rightArrowIcon": "Right arrow icon",
 
   "daysOfTheWeekShort": ["Su", "Mo", "Tu", "We", "Th", "Fr", "Sa"],
