--- a/web/crux-ui/locales/en/container.json
+++ b/web/crux-ui/locales/en/container.json
@@ -27,7 +27,6 @@
     "args": "Arguments",
     "exposeStrategy": "Expose strategy",
     "exposeStrategies": { "none": "None", "expose": "HTTP", "exposeWithTls": "HTTPS" },
-    "domainName": "Name",
     "domainUploadLimit": "Upload limit",
     "environment": "Environment",
     "secrets": "Secrets",
@@ -38,7 +37,9 @@
     "configContainer": "Config container",
     "keepFiles": "Keep files",
     "useParent": "Use parent",
+    "routing": "Routing",
     "domain": "Domain",
+    "stripPath": "Strip path",
     "expose": "Expose",
     "tty": "TTY",
     "initContainers": "Init containers",
@@ -56,7 +57,6 @@
       "port": "Port",
       "path": "Path",
       "containerDefault": "Container default",
-      "domainName": "Domain name",
       "domainUploadLimit": "Upload limit"
     }
   },
