--- a/web/crux-ui/locales/en/container.json
+++ b/web/crux-ui/locales/en/container.json
@@ -56,7 +56,7 @@
     "placeholders": {
       "port": "Port",
       "path": "Path",
-      "containerDefault": "Container default",
+      "containerDefault": "Container default"
     }
   },
 
