--- a/web/crux-ui/locales/en/container.json
+++ b/web/crux-ui/locales/en/container.json
@@ -117,7 +117,7 @@
     "loadBalancer": "Load balancer",
     "useLoadBalancer": "Use load balancer",
     "extraLBAnnotations": "Extra LB annotations",
-    "placeholders": { "headerName": "Header name", "cpuUsageExample": "100", "memoryUsageExample": "1m" },
+    "placeholders": { "headerName": "Header name", "cpuUsageExample": "10m", "memoryUsageExample": "512Mi" },
     "labels": "Labels",
     "annotations": "Annotations",
     "service": "Service",
