fix(crux-ui): project name filter (#754)

--- a/web/crux-ui/locales/en/container.json
+++ b/web/crux-ui/locales/en/container.json
@@ -110,7 +110,7 @@
     "customHeaders": "Custom headers",
     "resourceConfig": "Resource config",
     "cpu": "Cpu",
-    "memory": "Mermory",
+    "memory": "Memory",
     "limits": "Limits",
     "requests": "Requests",
     "proxyHeaders": "Proxy headers",
