--- a/web/crux-ui/locales/en/container.json
+++ b/web/crux-ui/locales/en/container.json
@@ -77,6 +77,7 @@
     },
     "drivers": "Drivers",
     "logDrivers": {
+      "unspecified": "Default",
       "none": "None",
       "gcplogs": "Gcplogs",
       "local": "Local",
