refactor(web): use node default instead of unspecified

--- a/web/crux-ui/locales/en/container.json
+++ b/web/crux-ui/locales/en/container.json
@@ -77,7 +77,7 @@
     },
     "drivers": "Drivers",
     "logDrivers": {
-      "unspecified": "Default",
+      "node_default": "Node default",
       "none": "None",
       "gcplogs": "Gcplogs",
       "local": "Local",
