fix(web): just a node_default to nodeDefault change

--- a/web/crux-ui/locales/en/container.json
+++ b/web/crux-ui/locales/en/container.json
@@ -77,7 +77,7 @@
     },
     "drivers": "Drivers",
     "logDrivers": {
-      "node_default": "Node default",
+      "nodeDefault": "Node default",
       "none": "None",
       "gcplogs": "Gcplogs",
       "local": "Local",
