--- a/web/crux-ui/locales/en/register.json
+++ b/web/crux-ui/locales/en/register.json
@@ -3,5 +3,6 @@
   "orSignUpWith": "Or sign up with",
   "alreadyUser": "Already a user?",
   "whenYouRegister": "When you register and use dyrector.io, you consent to dyrector.io processing your personal data in accordance with the terms outlined in the ",
-  "privacyPolicy": "Privacy Policy"
+  "privacyPolicy": "Privacy Policy",
+  "continue": "Continue"
 }
