--- a/web/crux-ui/locales/en/container.json
+++ b/web/crux-ui/locales/en/container.json
@@ -122,7 +122,8 @@
     "labels": "Labels",
     "annotations": "Annotations",
     "service": "Service",
-    "deployment": "Deployment"
+    "deployment": "Deployment",
+    "ingress": "Ingress"
   },
   "sensitiveKey": "Sensitive config data should be stored as secrets"
 }
