--- a/web/crux-ui/locales/en/deployments.json
+++ b/web/crux-ui/locales/en/deployments.json
@@ -16,6 +16,7 @@
   "noItems": "You haven't made a deployment.",
   "addDeployment": "Add deployment",
   "nodeRequired": "You can't create deployment without having at least one node",
+  "noVersions": "You haven't added a version to this project yet.",
   "alreadyHaveDeployment": "You already have a deployment with the same prefix for that node",
   "canNotCopyInProgress": "You can not copy an ",
   "prefixName": "Prefix: {{name}}",
