--- a/web/crux-ui/locales/en/storages.json
+++ b/web/crux-ui/locales/en/storages.json
@@ -8,5 +8,6 @@
     "accessKey": "Access key",
     "secretKey": "Secret key",
     "storageAlreadyInUse": "This storage is already in use. Modifying the url or the credentials may break existing deployments.",
-    "inUse": "This storage is already in use."
+    "inUse": "This storage is already in use.",
+    "altDefaultStoragePicture": "Picture of storage"
 }
