--- a/web/crux-ui/locales/en/common.json
+++ b/web/crux-ui/locales/en/common.json
@@ -214,6 +214,12 @@
 
   "storages": "Storages",
 
+  "sorting":{
+    "none":"None",
+    "az":"A-Z",
+    "za":"Z-A"
+  },
+
   "errors": {
     "registryRateLimit": "Rate limit reached, please try again later",
     "registryUnauthorized": "Unauthorized",
