feat(crux-ui): separate image and instance config buttons (#790)

--- a/web/crux-ui/locales/en/common.json
+++ b/web/crux-ui/locales/en/common.json
@@ -214,5 +214,8 @@
     "registryRateLimit": "Rate limit reached, please try again later",
     "registryUnauthorized": "Unauthorized",
     "deployRequiredSecrets": "The following instances have missing required secrets: {{instances}}"
-  }
+  },
+
+  "imageConfig":"Image config",
+  "instanceConfig":"Container config"
 }
