fix(crux-ui): sorting type change

--- a/web/crux-ui/locales/en/registries.json
+++ b/web/crux-ui/locales/en/registries.json
@@ -58,8 +58,8 @@
 
   "sorting":{
     "none":"None",
-    "az":"A-Z",
-    "za":"Z-A"
+    "asc":"Ascending",
+    "desc":"Descending"
   },
 
   "altDefaultRegistryPicture": "Picture of registry",
