refactor: secret managment in dagent

--- a/web/crux-ui/locales/en/nodes.json
+++ b/web/crux-ui/locales/en/nodes.json
@@ -72,6 +72,9 @@
     "left": "Left",
     "kicked": "Kicked",
     "update": "Update",
-    "containerCommand": "Container command"
+    "containerCommand": "Container command",
+    "installed": "Installed",
+    "updateCompleted": "Update completed",
+    "tokenReplaced": "Token replaced"
   }
 }
