--- a/web/crux-ui/locales/en/nodes.json
+++ b/web/crux-ui/locales/en/nodes.json
@@ -12,7 +12,7 @@
 
   "nodeAlreadyInUse": "This node is already in use in some deployments.",
 
-  "setup": "Install the agent",
+  "agentInstall": "Agent installation",
   "generateScript": "Generate script",
   "scriptExpiresIn": "The script expires in:",
   "address": "Address",
@@ -21,6 +21,7 @@
   "whatScriptDoesHeader": "What does this script do?",
   "scriptExplanation": "The following 'Generate script' button will create a one-liner and script that will install our agent to the target host with the selected technology.",
   "requirements": "Requirements",
+  "agentSettings": "Agent settings",
   "installReq": {
     "k8s": ["A kubernetes cluster", "kubectl authenticated, active context selected", "Ability to run these commands"],
     "docker": ["A linux host/VPS", "Docker or podman installed on host", "Ability to execute the script on host"]
@@ -51,6 +52,7 @@
   "persistentDataExplanation": "Stores basic operational data and serves as a base path for containers using relative volume names. Environment variables are resolved, but it is suggested to use absolute paths and avoid special characters.",
   "optionalLeaveEmptyForDefaults": "Optional, leave empty for default paths",
   "update": "Update",
+  "updateRequired": "This agent is incompatible with the current version of dyrector.io. You can update it with the update button below.",
   "updateError": "Failed to update agent: {{error}}",
   "ports": "Ports (External -> Internal)",
   "traefik": "Install Traefik reverse proxy",
@@ -70,6 +72,9 @@
     "left": "Left",
     "kicked": "Kicked",
     "update": "Update",
-    "containerCommand": "Container command"
+    "containerCommand": "Container command",
+    "installed": "Installed",
+    "updateCompleted": "Update completed",
+    "tokenReplaced": "Token replaced"
   }
 }
