feat: crane expose add, proto changes

--- a/web/crux-ui/locales/en/container.json
+++ b/web/crux-ui/locales/en/container.json
@@ -13,6 +13,7 @@
     "containerName": "Container name",
     "port": "Port",
     "exposePort": "Expose port",
+    "default": "Default",
     "noInternalPortsDefined": "No internal ports defined.",
     "portBinding": "Port binding",
     "volumes": "Volumes",
