fix: partial deployment validation

--- a/web/crux-ui/locales/en/errors.json
+++ b/web/crux-ui/locales/en/errors.json
@@ -16,5 +16,9 @@
 
   "invalidCredentials": "Invalid credentials",
   "confirmPassMismatch": "Passwords must match",
-  "validationFailed": "Validation failed ({{path}}): {{message}}"
+  "validationFailed": "Validation failed ({{path}}): {{message}}",
+
+  "registryRateLimit": "Rate limit reached, please try again later",
+  "registryUnauthorized": "Unauthorized",
+  "deployRequiredSecrets": "The following instances have missing required secrets: {{instances}}"
 }
